--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -9,5 +9,9 @@
 }
 
 .header h3 {
+  background-color: rgba(255, 255, 255, 0.438);
+  border: 1px solid rgb(23, 19, 19);
+  border-radius: 5px;
   font-size: 2rem;
+  padding: 10px;
 }
