--- a/src/components/TableMyEquities/styles.css
+++ b/src/components/TableMyEquities/styles.css
@@ -9,38 +9,55 @@
 }
 
 .table table {
-  align-items: center;
-  border-radius: 5px;
-  border: 1px rgba(0, 0, 0, 0.389) solid;
-  display: flex;
-  flex-direction: column;
-  height: auto;
-  justify-content: center;
+  table-layout: fixed;
+  width: 100%;
+}
 
-  margin-top: 10px;
+.table thead, td, th {
+  border: 3px solid #ffe100;
+}
+
+.table button {
+  background: #9602f898;
+  border: none;
+  border-radius: 50px;
+  color: #FFF;
+  cursor: pointer;
+  font-size: 1.75rem;
+
+  font-weight: 700;
+  margin: 12px 0 84px;
   padding: 24px;
-  width: 100%;
+
+  text-align: center;
+  transition: filter 0.3s;
+  width: 50%;
 }
 
-.table table thead tr {
-  align-items: center;
-  display: flex;
-  justify-content: center;
+.table button:hover {
+  filter: brightness(0.9);
 }
 
-.table table thead tr th {
-  border: 1px rgba(0, 0, 0, 0.389) solid;
-  border-radius: 5px;
-  margin: 7px;
-  padding: 35px;
-  width: 100%;
+@media (max-width: 573px) {
+  .table table {
+    font-size: 2rem;
+  }
 }
 
-.table table tbody tr td {
-  border: 1px rgba(0, 0, 0, 0.389) solid;
+@media (max-width: 470px) {
+  .table table {
+    font-size: 1.5rem;
+  }
+}
 
-  display: inline;
-  margin: 7px;
-  padding: 30px;
-  width: 100%;
+@media (max-width: 391px) {
+  .table table {
+    font-size: 1.25rem;
+  }
+}
+
+@media (max-width: 320px) {
+  .table table {
+    font-size: 1rem;
+  }
 }
