--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,6 +7,7 @@
 body, input, button {
   font-family: 'Roboto', sans-serif;
   font-size: 1.5rem;
-
+  background: rgb(235, 234, 234);
+  
   -webkit-font-smoothing: antialiased; /* deixar o contorno da fonte mais suave */
 }
