--- a/src/pages/Login/styles.css
+++ b/src/pages/Login/styles.css
@@ -7,7 +7,7 @@
 
 .container header h1{
   align-items: center;
-  color: #9602f8;
+  color: #ffe100;
   display: flex;
   justify-content: space-between;
   margin: 84px 0 24px;
@@ -25,7 +25,7 @@
 }
 
 .container button {
-  background: #9602f898;
+  background: #ffe100;
   border: none;
   border-radius: 5px;
   color: #FFF;
