--- a/src/pages/Equities/styles.css
+++ b/src/pages/Equities/styles.css
@@ -4,3 +4,49 @@
   margin-top: 10px;
   padding: 10px;
 }
+
+.title-equities-button {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.title-equities-button button {
+  background: #ffe100;
+  border: none;
+  border-radius: 50px;
+  color: rgb(3, 3, 3);
+  cursor: pointer;
+  font-size: 1.75rem;
+
+  font-weight: 700;
+  margin: 12px 0 84px;
+  padding: 24px;
+
+  text-align: center;
+  transition: filter 0.3s;
+  width: 50%;
+}
+
+.title-equities-button button:hover {
+  filter: brightness(0.9);
+}
+
+@media (max-width: 573px) {
+  .title-equities-button  button {
+    font-size: 2rem;
+  }
+}
+
+@media (max-width: 391px) {
+  .title-equities-button  button {
+    font-size: 1.75rem;
+  }
+}
+
+@media (max-width: 391px) {
+  .title-equities-button  button {
+    font-size: 1.5rem;
+  }
+}
