--- a/src/pages/DepositAndWithdraw/styles.css
+++ b/src/pages/DepositAndWithdraw/styles.css
@@ -5,7 +5,7 @@
 
 .cash-title h1 {
   align-items: center;
-  background: rgba(169, 161, 161, 0.743);
+  background: rgba(0, 0, 0, 0.802);
   color: white;
   display: flex;
   flex-direction: column;
@@ -17,8 +17,138 @@
   width: 100%;
 }
 
-@media (max-width: 380px) {
+.button-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  padding: 30px 0;
+}
+
+.button-container button {
+  background: #ffe100;
+  border: none;
+  border-radius: 30px;
+  color: rgb(3, 3, 3);
+  cursor: pointer;
+  font-size: 1.75rem;
+
+  font-weight: 700;
+  margin: 12px 0 84px;
+  padding: 24px;
+
+  text-align: center;
+  transition: filter 0.3s;
+  width: 25%;
+}
+
+.button-container button:hover {
+  filter: brightness(0.9);
+}
+
+.form-cash {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.form-cash input {
+  color: rgb(3, 3, 3);
+  font-size: 1.25rem;
+
+  font-weight: 400;
+
+  margin-bottom: 20px;
+  padding: 10px;
+
+  text-align: center;
+}
+
+.form-cash button {
+  background: #ffe100;
+  border: none;
+  border-radius: 30px;
+  color: rgb(3, 3, 3);
+  cursor: pointer;
+  font-size: 1.5rem;
+
+  font-weight: 500;
+  margin: 10px;
+  padding: 15px;
+
+  text-align: center;
+  transition: filter 0.3s;
+  width: 20%;
+}
+
+.form-cash button:hover {
+  filter: brightness(0.9);
+}
+
+@media (max-width: 400px) {
   .cash-title h1 {
     font-size: 2rem;
+  }
+
+  .button-container button {
+    font-size: 1.5rem;
+    margin: 8px;
+    padding: 13px;
+    border-radius: 14px;
+  }
+
+  .form-cash input {
+    font-size: 1.20rem;
+  
+    margin-bottom: 15px;
+    padding: 7px;
+  
+    text-align: center;
+  }
+
+  .form-cash button {
+    cursor: pointer;
+    font-size: 1.5rem;
+    margin: 8px;
+    padding: 13px;
+    border-radius: 14px;
+
+  }
+}
+
+@media (max-width: 375px) {
+  .button-container button {
+    margin: 8px;
+    padding: 10px;
+    border-radius: 10px;
+  }
+
+  .form-cash input {
+    font-size: 1.20rem;
+  
+    margin: 8px;
+    padding: 10px;
+    border-radius: 10px;
+  
+    text-align: center;
+  }
+
+  .form-cash button {
+    font-size: 1.5rem;
+    margin: 8px;
+    padding: 10px;
+    border-radius: 10px;
+  }
+}
+
+@media (max-width: 340px) {
+  .form-cash button {
+    font-size: 1.25rem;
+    margin: 8px;
+    padding: 10px;
+    border-radius: 10px;
   }
 }
