--- a/src/pages/DepositAndWithdraw/styles.css
+++ b/src/pages/DepositAndWithdraw/styles.css
@@ -6,7 +6,7 @@
 .cash-title h1 {
   align-items: center;
   background: rgba(0, 0, 0, 0.802);
-  color: white;
+  color: #ffe100;
   display: flex;
   flex-direction: column;
   font-size: 3rem;
