--- a/src/pages/Equities/styles.css
+++ b/src/pages/Equities/styles.css
@@ -1,8 +1,20 @@
 .title-equities {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
-  padding: 10px;
+}
+
+.title-equities h1 {
+  align-items: center;
+  background: rgba(0, 0, 0, 0.802);
+  color: #ffe100;
+  display: flex;
+  flex-direction: column;
+  font-size: 3rem;
+  height: auto;
+  justify-content: center;
+
+  height: 15vh;
+  width: 100%;
 }
 
 .title-equities-button {
