--- a/src/pages/PurchaseAndSale/styles.css
+++ b/src/pages/PurchaseAndSale/styles.css
@@ -6,7 +6,7 @@
 .title-purchaseandsale h1 {
   align-items: center;
   background: rgba(0, 0, 0, 0.802);
-  color: white;
+  color: #ffe100;
   display: flex;
   flex-direction: column;
   font-size: 3rem;
@@ -15,4 +15,53 @@
 
   height: 15vh;
   width: 100%;
+}
+
+.button-purchaseandsale {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  padding: 30px 0;
+}
+
+.button-purchaseandsale button {
+  background: #ffe100;
+  border: none;
+  border-radius: 30px;
+  color: rgb(3, 3, 3);
+  cursor: pointer;
+  font-size: 1.75rem;
+
+  font-weight: 700;
+  margin: 12px 0 84px;
+  padding: 24px;
+
+  text-align: center;
+  transition: filter 0.3s;
+  width: 25%;
+}
+
+
+@media (max-width: 400px) {
+  .title-purchaseandsale h1 {
+    font-size: 2rem;
+  }
+
+  .button-purchaseandsale button {
+    font-size: 1.5rem;
+    margin: 8px;
+    padding: 13px;
+    border-radius: 14px;
+  }
+
+}
+
+@media (max-width: 375px) {
+  .button-purchaseandsale button {
+    margin: 8px;
+    padding: 10px;
+    border-radius: 10px;
+  }
+
 }
