--- a/src/components/TableMyEquities/styles.css
+++ b/src/components/TableMyEquities/styles.css
@@ -18,16 +18,16 @@
 }
 
 .table button {
-  background: #9602f898;
+  background: #ffe100ca;
   border: none;
-  border-radius: 50px;
-  color: #FFF;
+  border-radius: 20px;
+  color: rgb(0, 0, 0);
   cursor: pointer;
   font-size: 1.75rem;
 
   font-weight: 700;
-  margin: 12px 0 84px;
-  padding: 24px;
+  margin: 12px;
+  padding: 14px;
 
   text-align: center;
   transition: filter 0.3s;
@@ -41,6 +41,13 @@
 @media (max-width: 573px) {
   .table table {
     font-size: 2rem;
+  }
+
+  .table button {
+    font-size: 1.5rem;
+    margin: 8px;
+    padding: 13px;
+    border-radius: 14px;
   }
 }
 
