--- a/src/pages/PurchaseAndSale/styles.css
+++ b/src/pages/PurchaseAndSale/styles.css
@@ -42,6 +42,47 @@
   width: 25%;
 }
 
+.div-form-purchaseandsale {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.div-form-purchaseandsale input {
+  background: #E6E6E6;
+  border-radius: 5px;
+  border: 1px rgba(0, 0, 0, 0.389) solid;
+  font-size: 1.75rem;
+  margin: 10px;
+  padding: 10px;
+  width: 100%;
+}
+
+.input-sale button {
+  background: #0062ff;
+  border: 1px rgba(0, 0, 0, 0.389) solid;
+  border-radius: 5px;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  font-size: 1.75rem;
+
+  font-weight: 700;
+  margin: 5px;;
+  padding: 10px;
+}
+
+.input-purchase button {
+  background: #20d12f;
+  border: 1px rgba(0, 0, 0, 0.389) solid;
+  border-radius: 5px;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  font-size: 1.75rem;
+
+  font-weight: 700;
+  margin: 5px;;
+  padding: 10px;
+}
+
 
 @media (max-width: 400px) {
   .title-purchaseandsale h1 {
