--- a/src/pages/PurchaseAndSale/styles.css
+++ b/src/pages/PurchaseAndSale/styles.css
@@ -45,16 +45,17 @@
 .div-form-purchaseandsale {
   display: flex;
   justify-content: space-evenly;
+  text-align: center;
 }
 
 .div-form-purchaseandsale input {
   background: #E6E6E6;
   border-radius: 5px;
   border: 1px rgba(0, 0, 0, 0.389) solid;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   margin: 10px;
   padding: 10px;
-  width: 100%;
+  width: 50%;
 }
 
 .input-sale button {
@@ -63,7 +64,7 @@
   border-radius: 5px;
   color: rgb(0, 0, 0);
   cursor: pointer;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
 
   font-weight: 700;
   margin: 5px;;
@@ -81,8 +82,8 @@
   font-weight: 700;
   margin: 5px;;
   padding: 10px;
+  width: 25%;
 }
-
 
 @media (max-width: 400px) {
   .title-purchaseandsale h1 {
@@ -91,6 +92,13 @@
 
   .button-purchaseandsale button {
     font-size: 1.5rem;
+    margin: 8px;
+    padding: 13px;
+    border-radius: 14px;
+  }
+
+  .input-purchase .input-sale button {
+    font-size: 1.25rem;
     margin: 8px;
     padding: 13px;
     border-radius: 14px;
@@ -105,4 +113,19 @@
     border-radius: 10px;
   }
 
+  .input-purchase .input-sale button {
+    font-size: 1.1rem;
+    margin: 8px;
+    padding: 10px;
+    border-radius: 14px;
+  }
+}
+
+@media (max-width: 320px) {
+  .input-purchase .input-sale button {
+    font-size: 0.5rem;
+    margin: 8px;
+    padding: 13px;
+    border-radius: 14px;
+  }
 }
