--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -4,8 +4,9 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: flex-end;
+  justify-content: center;
   padding: 20px;
+  text-align: center;
   width: 100%;
 }
 
@@ -15,6 +16,8 @@
   border-radius: 5px;
   font-size: 2rem;
   padding: 10px;
+  text-align: center;
+
 }
 
 .header h3:hover {
@@ -30,6 +33,12 @@
 @media (max-width: 391px) {
   .header h3 {
     font-size: 1.75rem;
+  }
+}
+
+@media (max-width: 375) {
+  .header h3 {
+    font-size: 1.5rem;
   }
 }
 
