--- a/src/components/TableOtherEquities/styles.css
+++ b/src/components/TableOtherEquities/styles.css
@@ -1,15 +1,18 @@
 .table-other {
   display: flex;
   font-size: 2.5rem;
-  height: 50vh;
+  height: 60vh;
 
   margin: auto;
+  margin-top: 20px;
   padding: 20px;
   text-align: center;
+  width: 100%;
 }
 
 .table-other table {
   table-layout: fixed;
+  margin-top: 60px;
   width: 100%;
 }
 
@@ -18,9 +21,49 @@
   padding: 10px;
 }
 
+.table-other button {
+  background: #ffe100ca;
+  border: none;
+  border-radius: 20px;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  font-size: 1.75rem;
+
+  font-weight: 700;
+  margin: 12px;
+  padding: 14px;
+
+  text-align: center;
+  transition: filter 0.3s;
+}
+
+.table-other button:hover {
+  filter: brightness(0.9);
+}
+
 @media (max-width: 573px) {
   .table-other table {
     font-size: 2rem;
+  }
+
+  .table-other button {
+    font-size: 1.5rem;
+    margin: 8px;
+    padding: 13px;
+    border-radius: 14px;
+  }
+}
+
+@media (max-width: 508px) {
+  .table-other table {
+    font-size: 2rem;
+  }
+
+  .table-other button {
+    font-size: 1.5rem;
+    margin: 7px;
+    padding: 10px;
+    border-radius: 12px;
   }
 }
 
@@ -28,16 +71,58 @@
   .table-other table {
     font-size: 1.5rem;
   }
-}
-
-@media (max-width: 391px) {
-  .table-other table {
+  .table-other button {
     font-size: 1.25rem;
+    margin: 6px;
+    padding: 9px;
+    border-radius: 12px;
   }
 }
 
-@media (max-width: 391px) {
+@media (max-width: 430px) {
+  .table-other table {
+    font-size: 1.5rem;
+  }
+
+  .table-other button {
+    font-size: 1.15rem;
+    margin: 4px;
+    padding: 8px;
+    border-radius: 12px;
+  }
+}
+
+@media (max-width: 402px) {
+  .table-other button {
+    font-size: 1.15rem;
+    margin: 4px;
+    padding: 6.5px;
+    border-radius: 12px;
+  }
+}
+
+@media (max-width: 388px) {
+  .table-other table {
+    font-size: 1.25rem;
+  }
+
+  .table-other button {
+    font-size: 1.15rem;
+    margin: 4px;
+    padding: 5.5px;
+    border-radius: 12px;
+  }
+}
+
+@media (max-width: 375px) {
   .table-other table {
     font-size: 1rem;
+  }
+
+  .table-other button {
+    font-size: 1rem;
+    margin: 5px;
+    padding: 4.5px;
+    border-radius: 12px;
   }
 }
