--- a/src/pages/Equities/styles.css
+++ b/src/pages/Equities/styles.css
@@ -30,40 +30,90 @@
 }
 
 .title-equities-button button {
+  display: flex;
   background: #ffe100;
   border: none;
-  border-radius: 50px;
+  border-radius: 30px;
   color: rgb(3, 3, 3);
   cursor: pointer;
   font-size: 1.75rem;
 
+  justify-content: center;
+
   font-weight: 700;
-  margin: 12px 0 84px;
+  margin: 84px;
   padding: 24px;
 
   text-align: center;
   transition: filter 0.3s;
-  width: 50%;
+  width: 25%;
 }
 
 .title-equities-button button:hover {
   filter: brightness(0.9);
 }
 
+@media (max-width: 620px) {
+  .title-equities-button button {
+    font-size: 1.75rem;
+    margin: 84px;
+    padding: 20px;
+  }
+}
+
+@media (max-width: 594px) {
+  .title-equities-button button {
+    font-size: 1.65rem;
+    margin: 84px;
+    padding: 20px;
+  }
+}
+
 @media (max-width: 573px) {
-  .title-equities-button  button {
-    font-size: 2rem;
+  .title-equities-button button {
+    font-size: 1.5rem;
+    margin: 84px;
+    padding: 18px;
+  }
+}
+
+@media (max-width: 510px) {
+  .title-equities-button button {
+    font-size: 1.45rem;
+    margin: 74px;
+    padding: 18px;
+    width: 30%;
+  }
+}
+
+@media (max-width: 456px) {
+  .title-equities-button button {
+    font-size: 1.35rem;
+    margin: 74px;
+    padding: 18px;
+  }
+}
+
+@media (max-width: 456px) {
+  .title-equities-button button {
+    width: 40%;
   }
 }
 
 @media (max-width: 391px) {
-  .title-equities-button  button {
+  .title-equities-button button {
     font-size: 1.75rem;
   }
 }
 
-@media (max-width: 391px) {
-  .title-equities-button  button {
+@media (max-width: 375px) {
+  .title-equities-button button {
     font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 456px) {
+  .title-equities-button button {
+    width: 50%;
   }
 }
