--- a/src/pages/PurchaseAndSale/styles.css
+++ b/src/pages/PurchaseAndSale/styles.css
@@ -63,11 +63,10 @@
   border: 1px rgba(0, 0, 0, 0.389) solid;
   border-radius: 5px;
   color: rgb(0, 0, 0);
-  cursor: pointer;
   font-size: 1.5rem;
 
   font-weight: 700;
-  margin: 5px;;
+  margin: 5px;
   padding: 10px;
 }
 
