--- a/src/pages/Equities/styles.css
+++ b/src/pages/Equities/styles.css
@@ -25,7 +25,7 @@
 .title-equities-button {
   display: flex;
   justify-content: center;
-  margin-top: 10px;
+  margin-top: 120vh;
   padding: 10px;
 }
 
@@ -52,6 +52,14 @@
 .title-equities-button button:hover {
   filter: brightness(0.9);
 }
+
+@media (max-width: 663px) {
+  .title-equities-button {
+    margin-top: 100vh;
+    padding: 10px;
+  }
+}
+
 
 @media (max-width: 620px) {
   .title-equities-button button {
@@ -86,29 +94,65 @@
   }
 }
 
+@media (max-width: 508px) {
+  .title-equities-button {
+    margin-top: 90vh;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 470px) {
+  .title-equities-button {
+    margin-top: 75vh;
+    padding: 10px;
+  }
+}
+
 @media (max-width: 456px) {
   .title-equities-button button {
     font-size: 1.35rem;
     margin: 74px;
     padding: 18px;
+
+    width: 40%;
   }
 }
 
-@media (max-width: 456px) {
-  .title-equities-button button {
-    width: 40%;
+@media (max-width: 430px) {
+  .title-equities-button {
+    margin-top: 65vh;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 402px) {
+  .title-equities-button {
+    margin-top: 59vh;
+    padding: 10px;
   }
 }
 
 @media (max-width: 391px) {
   .title-equities-button button {
-    font-size: 1.75rem;
+    font-size: 1.45rem;
+  }
+}
+
+@media (max-width: 388px) {
+  .title-equities-button {
+    margin-top: 55vh;
+    padding: 10px;
   }
 }
 
 @media (max-width: 375px) {
   .title-equities-button button {
-    font-size: 1.5rem;
+    font-size: 1.45rem;
+  }
+
+  .title-equities-button {
+    margin-top: 50vh;
+    padding: 10px;
   }
 }
 
