--- a/src/pages/DepositAndWithdraw/styles.css
+++ b/src/pages/DepositAndWithdraw/styles.css
@@ -5,8 +5,8 @@
 
 .cash-title h1 {
   align-items: center;
-  background: rgba(0, 0, 0, 0.802);
-  color: #ffe100;
+  background: #222222;
+  color: #FBC205;
   display: flex;
   flex-direction: column;
   font-size: 3rem;
@@ -15,6 +15,32 @@
 
   height: 15vh;
   width: 100%;
+}
+
+.form-cash {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 50px;
+  width: 100%;
+}
+
+.form-cash span {
+  color: #000000;
+  font-size: 2rem;
+
+  font-weight: 700;
+  padding: 10px;
+}
+
+.form-cash input {
+  color: #000000;
+  font-size: 1.5rem;
+  border: 1px solid #222222;
+  text-align: center;
+  padding: 7px;
+  width: 70%;
 }
 
 .button-container {
@@ -26,10 +52,10 @@
 }
 
 .button-container button {
-  background: #ffe100;
+  background: #FBC205;
   border: none;
   border-radius: 30px;
-  color: rgb(3, 3, 3);
+  color: #000000;
   cursor: pointer;
   font-size: 1.75rem;
 
@@ -46,29 +72,8 @@
   filter: brightness(0.9);
 }
 
-.form-cash {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  margin-top: 20px;
-  width: 100%;
-}
-
-.form-cash input {
-  color: rgb(3, 3, 3);
-  font-size: 1.25rem;
-
-  font-weight: 400;
-
-  margin-bottom: 20px;
-  padding: 10px;
-
-  text-align: center;
-}
-
 .form-cash button {
-  background: #ffe100;
+  background: #FBC205;
   border: none;
   border-radius: 30px;
   color: rgb(3, 3, 3);
@@ -88,24 +93,74 @@
   filter: brightness(0.9);
 }
 
+.button-primary-actions {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 0;
+}
+
+.button-primary-actions button {
+  background: #222222;
+  border: none;
+  border-radius: 30px;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-size: 1.75rem;
+
+  font-weight: 700;
+  padding: 12px;
+  margin: 10px;
+
+  text-align: center;
+  transition: filter 0.3s;
+  width: 10%;
+}
+
+.button-primary-actions button:hover {
+  filter: brightness(0.9);
+}
+
+.button-secondary-actions {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 20px;
+  padding: 30px 0;
+}
+
+.button-secondary-actions button {
+  background: #FBC205;
+  border: none;
+  border-radius: 30px;
+  color: #000000;
+  cursor: pointer;
+  font-size: 1.75rem;
+
+  font-weight: 700;
+  margin: 12px 0 84px;
+  padding: 24px;
+
+  text-align: center;
+  transition: filter 0.3s;
+  width: 25%;
+}
+
+.button-secondary-actions button:hover {
+  filter: brightness(0.9);
+}
+
 @media (max-width: 400px) {
   .cash-title h1 {
     font-size: 2rem;
   }
 
-  .button-container button {
-    font-size: 1.5rem;
-    margin: 8px;
-    padding: 13px;
-    border-radius: 14px;
-  }
-
   .form-cash input {
     font-size: 1.20rem;
-  
+
     margin-bottom: 15px;
     padding: 7px;
-  
+
     text-align: center;
   }
 
@@ -115,29 +170,35 @@
     margin: 8px;
     padding: 13px;
     border-radius: 14px;
+  }
 
+  .button-secondary-actions button {
+    font-size: 1.5rem;
+    margin: 8px;
+    padding: 13px;
+    border-radius: 14px;
   }
 }
 
 @media (max-width: 375px) {
-  .button-container button {
-    margin: 8px;
-    padding: 10px;
-    border-radius: 10px;
-  }
-
   .form-cash input {
     font-size: 1.20rem;
-  
+
     margin: 8px;
     padding: 10px;
     border-radius: 10px;
-  
+
     text-align: center;
   }
 
   .form-cash button {
     font-size: 1.5rem;
+    margin: 8px;
+    padding: 10px;
+    border-radius: 10px;
+  }
+
+  .button-secondary-actions button {
     margin: 8px;
     padding: 10px;
     border-radius: 10px;
